# formconv

./: AUTHORS  BUGS  COPYRIGHT  ChangeLog  FAQ  HISTORY  INSTALL  INSTALL.win  LICENSE  Makefile.in  OVERVIEW  README  build.xml  configure  configure.in  control-dapper.in  control-etch.in  control-feisty.in  formconv.dev  mkChangeLog  shlibs
doc/: formconv.1  help.txt  overview.dia  overview.eps  overview.txt  webinfo.txt
obsolete/0.7.2/: ChangeLog  HISTORY  Makefile.in  README  config.h.in  configure  configure.in  formconv.c  formconv.spec.in  mkbintgz.in  mktgz.in
obsolete/0.7.2/doc/: Makefile.in  doc.sed  formconv.1  formconv.lyx  magyar_leiras.lyx
obsolete/0.7.2/pccts/: AST.h  Makefile.in  beautify.sor  c_out.sor  ccomplex_out.sor  expand.sor  formconv.g  gnuplot_out.sor  html_out.sor  java_out.sor  latex_out.sor  maple_out.sor  mathml_out.sor  maxima_out.sor  mupad_out.sor  stringhu.cpp  stringhu.h  utility.cpp  utility.h  verb_hu_out.sor  yacas_out.sor
obsolete/0.7.2/test/: c2latex  settest  testcases
regression/: README  cabs.in  cabs.out  complex_mathml_in.in  complex_mathml_in.out  d.in  general1.in  general2.in  general2.out  general3.in  general3.out  getmawlogs  i-ccomplex.in  makemaw.ins  makemaw.ins.pl  makemawtests  makeregr  makeregrs  makewmi2tests  maw-10.in  maw-10.out  maw-100.in  maw-100.out  maw-1000.in  maw-1000.out  maw-1010.in  maw-1010.out  maw-1020.in  maw-1020.out  maw-1030.in  maw-1030.out  maw-1040.in  maw-1040.out  maw-1050.in  maw-1050.out  maw-1060.in  maw-1060.out  maw-1070.in  maw-1070.out  maw-1080.in  (+1395 more)
src/cpp/: c.cpp  formconv.cpp  java.cpp  latex.cpp  mathematica.cpp  mathml.cpp  mathmlintest.cpp  misc.cpp  test.cpp
src/cpp/h/: fastcomplexcompute.h  fastcompute.h  fcAST.h  fccomplexAST.h  fcversion.h  fcversion.h.in  formconv.h  misc.h
src/grm/: c.g  complexcompute.g  complexcomputeboost.g  contenttransform.g  contenttransform2.g  contmathmlin.g  contmathmltointuitive.g  intuitive.g  java.g  latex.g  mathematica.g  mathml.g  presentationtransform.g  transform.g
src/grm/input/: lisp.g
src/grm/output/: ccomplex.g  gnuplot.g  html.g  lisp.g  maple.g  maxima.g  mupad.g
src/grm/transform/: constanttransform.g
test/: Makefile.in  README  complex.cpp  configure  configure.in
test/C/: Makefile  function.c
test/MathML/: Makefile  a.xml  function.xml  sphere.xml  sum.xml  vectors.xml
